--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fin des informations spécifiques aux mobiles -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <link rel="stylesheet" type="text/css" href="styleCSS/style.css" />
     <link rel="stylesheet" type="text/css" href="styleCSS/stylebootstrapindex.css" />
     <link rel="stylesheet" media="screen and (max-width: 992px)" href="styleCSS/styleMobile.css" />
@@ -42,15 +43,14 @@
             <section id="sec1">
                 <div id="intro">
                     <h1> Bienvenue sur mon Portfolio !</h1>
-                    <p>Je m'appelle Antoine Després, je suis étudiant première année de DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>. Je suis actuellement à la recherche d'une entreprise pour réaliser ma deuxième année de formation en apprentissage.<br>Vous trouverez ici toutes les informations dont vous aurez besoin sur moi.</p>
+                    <p>Actuellement en première année de DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>, je suis à la recherche d'un contrat d'apprentissage d'une durée d'un an pour ma deuxième année de formation, au rythme de 3 jours en entreprise / 2 jours à l'IUT.</p>
                 </div>
-
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3">
                             <h1>Expériences</h1>
-                            <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire</p>
-                            <a class="btn btn-dark" href="./experiences/" role="button">Lire</a>
+                            <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire.</p>
+                            <a class="btn btn-dark" href="./experiences/" role="button">Lire plus</a>
                         </div>
                         <div class="col-lg-9"></div>
                     </div>
@@ -77,9 +77,11 @@
         </div> <!-- fin id="page"-->
 
         <footer>
-            <h1>Antoine Després - 2020</h1>
+            <p><a href="./contact/">Contact</a>
+                <br><a href="./legal/">Mentions légales</a><br></p>
             <hr />
-            <p><a href="./contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="./images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="./legal/">Mentions légales</a><br></p>
+            <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="dark" data-vanity="antoine-després-89614718b"><a class="LI-simple-link" href='https://fr.linkedin.com/in/antoine-despr%C3%A9s-89614718b?trk=profile-badge'>Antoine Després</a></div>
+
         </footer>
     </div> <!-- fin id="globale"-->
 </body></html>
