--- a/competences/index.html
+++ b/competences/index.html
@@ -8,9 +8,10 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fin des informations spécifiques aux mobiles -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
     <link rel="stylesheet" type="text/css" href="../styleCSS/stylepages.css" />
     <link rel="stylesheet" media="screen and (max-width: 992px)" href="../styleCSS/styleMobile.css" />
@@ -44,7 +45,7 @@
         <div id="page">
             <section id="sec1">
                 <h1> Mes compétences</h1>
-                <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet d'acquérir des compétences en programmation. J'ai aujourd'hui des bases solides en C/C++ et j'apprends le langage Python en parallèle, mais ce n'est pas tout !</p>
+                <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet d'acquérir des compétences en programmation. J'ai aujourd'hui des bases solides en programmation orientée objet (Java) et en bases de données, mais ce n'est pas tout !</p>
 
                 <article>
                     <h1 id="programmation">Programmation</h1><br />
@@ -117,9 +118,11 @@
         </div> <!-- fin id="page"-->
 
         <footer>
-            <h1>Antoine Després - 2020</h1>
+            <p><a href="../contact/">Contact</a>
+                <br><a href="../legal/">Mentions légales</a><br></p>
             <hr />
-            <p><a href="../contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="../images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="../legal/">Mentions légales</a><br></p>
+            <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="dark" data-vanity="antoine-després-89614718b"><a class="LI-simple-link" href='https://fr.linkedin.com/in/antoine-despr%C3%A9s-89614718b?trk=profile-badge'>Antoine Després</a></div>
+
         </footer>
 
     </div> <!-- fin id="globale"-->
