--- a/loisirs/index.html
+++ b/loisirs/index.html
@@ -8,11 +8,10 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fin des informations spécifiques aux mobiles -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
-    <script type="text/javascript " src=../fixedmenu.js></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
     <link rel="stylesheet" type="text/css" href="../styleCSS/stylepages.css" />
     <link rel="stylesheet" media="screen and (max-width: 992px)" href="../styleCSS/styleMobile.css" />
@@ -21,7 +20,7 @@
 <body ontouchstart="">
 
     <div id="globale">
-        <header id="myHeader">
+        <header>
             <h1><a href="../">Antoine Després</a></h1>
             <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
@@ -69,7 +68,7 @@
                         <div class="imagearticle"><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="../images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a></div>
                         <p>Depuis toujours, je n'ai jamais été très bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.<br>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> est l'une de mes sources d'inspiration, car cette personne utilise exactement les mêmes outils et la même application que moi dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
                     </div>
-                    
+
 
                 </article>
 
@@ -78,9 +77,11 @@
         </div> <!-- fin id="page"-->
 
         <footer>
-            <h1>Antoine Després - 2020</h1>
+            <p><a href="../contact/">Contact</a>
+                <br><a href="../legal/">Mentions légales</a><br></p>
             <hr />
-            <p><a href="../contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="../images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="../legal/">Mentions légales</a><br></p>
+            <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="dark" data-vanity="antoine-després-89614718b"><a class="LI-simple-link" href='https://fr.linkedin.com/in/antoine-despr%C3%A9s-89614718b?trk=profile-badge'>Antoine Després</a></div>
+
         </footer>
 
     </div> <!-- fin id="globale"-->
