--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <h1>Expériences</h1>
-                            <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire.</p>
+                            <p>J'ai réalisé mon stage de troisième à la Société Générale, à La Défense. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire.</p>
                             <a class="btn btn-dark" href="./experiences/" role="button">Lire plus</a>
                         </div>
                         <div class="col-lg-9"></div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-7"><a href="./competences/"><img class="grandebanniere" src="images/banniere_langages.png" alt="Voici quelques langages que je maîtrise !" /></a></div>
+                        <div class="col-lg-7"></div>
                         <div class="col-lg-5">
                             <h1>Compétences</h1>
                             <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet de maîtriser les bases des principaux langages de programmation, à savoir C, C++, Java et Python. Je m'intéresse également au langage Swift en dehors des cours</p>
@@ -68,7 +68,7 @@
                             <p>En dehors des cours, je m'adonne à des projets personnels en programmation, à la photographie et occasionnellement au dessin</p>
                             <a class="btn btn-dark" href="./loisirs" role="button">Lire plus</a>
                         </div>
-                        <div class="col-lg-8"><a href="./loisirs"><img class="grandebanniere" src="images/banniere_loisirs.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a></div>
+                        <div class="col-lg-8"></div>
                     </div>
                 </div>
 
